# yarb

./: .env.example  CMakeLists.txt  CMakePresets.json
src/: database.cpp  database.h  protocollogin.cpp
vc17/: theforgottenserver.vcxproj
